--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Node dependencies
+# Node modules & dependencies
 node_modules/
 package-lock.json
 
@@ -9,32 +9,41 @@ www/
 # Capacitor
 ios/App/public/
 
-# macOS system files
+# macOS
 .DS_Store
 
 # VS Code
 .vscode/
 
-# Log files
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Test output
+coverage/
+tests/e2e/videos/
+tests/e2e/screenshots/
 
-# Capacitor iOS (CocoaPods)
+# Cypress
+cypress/screenshots/
+cypress/videos/
+cypress/results/
+
+# Capacitor iOS (CocoaPods + Builds)
 ios/App/Pods/
 ios/App/Podfile.lock
-ios/App/DerivedData/
 ios/App/build/
-
-# Xcode
+ios/App/DerivedData/
 ios/App/*.xcworkspace/xcuserdata/
-ios/App/*.xcworkspace/xcshareddata/
 ios/App/*.xcodeproj/xcuserdata/
 ios/App/*.xcodeproj/project.xcworkspace/
 ios/App/*.xcodeproj/xcshareddata/
-ios/App/*.xcuserdata/
 
-# Environment files (falls du später ENV nutzt)
-.env
-.env.local
-.env.production
+# Xcode local settings
+ios/App/*.xcuserdata/
+ios/App/*.xcshareddata/
+
+# Log- und Cache-Dateien
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Env (falls du später ENV-Dateien nutzt)
+.env*
