--- a/package.json
+++ b/package.json
@@ -12,14 +12,21 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@capacitor-mlkit/barcode-scanning": "^7.2.1",
     "@capacitor/app": "7.0.1",
+    "@capacitor/browser": "^7.0.1",
+    "@capacitor/clipboard": "^7.0.1",
     "@capacitor/core": "7.4.2",
     "@capacitor/haptics": "7.0.1",
     "@capacitor/ios": "^7.4.2",
     "@capacitor/keyboard": "7.0.1",
+    "@capacitor/preferences": "^7.0.1",
+    "@capacitor/share": "^7.0.1",
     "@capacitor/status-bar": "7.0.1",
+    "@capawesome/capacitor-file-picker": "^7.2.0",
     "@ionic/vue": "^8.0.0",
     "@ionic/vue-router": "^8.0.0",
+    "capacitor-file-picker": "^1.0.10",
     "ionicons": "^7.0.0",
     "vue": "^3.3.0",
     "vue-router": "^4.2.0"
