--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@capacitor-mlkit/barcode-scanning": "^7.2.1",
     "@capacitor/app": "7.0.1",
+    "@capacitor/assets": "^3.0.5",
     "@capacitor/browser": "^7.0.1",
     "@capacitor/clipboard": "^7.0.1",
     "@capacitor/core": "7.4.2",
@@ -22,6 +23,7 @@
     "@capacitor/keyboard": "7.0.1",
     "@capacitor/preferences": "^7.0.1",
     "@capacitor/share": "^7.0.1",
+    "@capacitor/splash-screen": "^7.0.1",
     "@capacitor/status-bar": "7.0.1",
     "@capawesome/capacitor-file-picker": "^7.2.0",
     "@ionic/vue": "^8.0.0",
