--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@capacitor-mlkit/barcode-scanning": "^7.2.1",
+    "@capacitor/android": "^7.4.2",
     "@capacitor/app": "7.0.1",
     "@capacitor/assets": "^3.0.5",
     "@capacitor/browser": "^7.0.1",
